--- a/Manager/Content/CSS/RegistrationPagee.css
+++ b/Manager/Content/CSS/RegistrationPagee.css
@@ -1,10 +1,64 @@
-﻿#RegistrationPage {
+﻿#Login {
+    width: 400px;
+    height: 390px;
+    background: #3c4647;
+    margin: auto;
+    margin-top: 170px;
+    border-radius: 5px;
+    border-color: #FFFFFF;
+    border-style: solid;
+    border-width: 4px;
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center
+}
+
+#Login2 {
+    width: 400px;
+    height: 730px;
+    background: #3c4647;
+    margin: auto;
+    margin-top: -24px;
+    border-radius: 5px;
+    border-color: #FFFFFF;
+    border-style: solid;
+    border-width: 4px;
+    font-family: Helvetica, Arial, sans-serif;
+    text-align: center
+}
+.heading {
+    color: #707476;
+    margin-top: 50px;
+    font-size: 2.5em;
+    font-weight: bold
+}
+
+
+
+.input-name {
+    margin-bottom: 45px;
+    margin-left: 50px;
+}
+
+.input-pass {
+    margin-bottom: 45px;
+    margin-left: 50px;
+}
+
+.login{
    
-    margin-left:25rem;
+    top: -40px;
+    font-weight: 500;
+    color: #6B6A6A;
 }
-#Login {
-    margin-left: 25rem;
+
+.input {
+    margin-bottom: 45px;
+    margin-left: 50px;
 }
-#middel {
-    margin-left: 35rem;
+.input-type {
+    margin-bottom: 45px;
+    margin-right: 200px;
+    color:black;
 }
+
+
