--- a/Manager/Views/Login/Login.cshtml
+++ b/Manager/Views/Login/Login.cshtml
@@ -4,40 +4,44 @@
     ViewBag.Title = "Login";
 }
 <link href="~/Content/CSS/RegistrationPagee.css" rel="stylesheet" />
-<h2 id="middel">Login</h2>
 
-@using (Html.BeginForm()) 
+
+
+
+
+@using (Html.BeginForm())
+
 {
+
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal " id="Login">
-       
-        
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<div id="Login">
+    <p class="heading">Login</p>
+    <div class="form-horizontal">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+        <div class="input-name">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { placeholder = "Name", @class = "form-control" } })
+            <br />
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-pass">
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { placeholder = "Password", @class = "form-control" } })
+            <br />
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
+        <div class="login">
+            <input type="submit" value="Login" class="btn btn-default" />
         </div>
     </div>
+    <br />
+    <div>
+        <a style="margin-top:20px;">@Html.ActionLink("Sign Up", "Registration", "Registration")</a>
+    </div>
+
+</div>
 }
 
-<div>
-   <button id="middel">@Html.ActionLink("sign Up", "Registration", "Registration")</button> 
-</div>
+
+
+
+
