--- a/Manager/Views/Shared/_Layout.cshtml
+++ b/Manager/Views/Shared/_Layout.cshtml
@@ -8,17 +8,18 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-   
+
     <div class="container body-content">
         @RenderBody()
-        
+
         <footer>
-            
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
