--- a/Manager/Views/Tasks/Create.cshtml
+++ b/Manager/Views/Tasks/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+   
 }
 
 <h2>Create</h2>
@@ -25,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Name, ViewBag.NameList as SelectList, new { @class = "form-Control", required = "required" })
+                @Html.DropDownListFor(model => model.Name, ViewBag.NameList as SelectList,"----Select Name---", new { @class = "form-Control"})
 
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
