--- a/Manager/Views/Emp/TodayAssigned.cshtml
+++ b/Manager/Views/Emp/TodayAssigned.cshtml
@@ -1,83 +1,106 @@
 ﻿@model IEnumerable<Manager.Models.Task>
+
 @{
-    ViewBag.Title = "TodayAssigned";
+    ViewBag.Title = "Index";
+
 }
 
-<h2>TodayAssigned</h2>
+
+<link href="~/Content/CSS/AdminTask.css" rel="stylesheet" />
+
+
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 AssignedTasks">
-            
-        </div>
-        <div class="col-md-6 logout">
             <h2>
-                @Html.ActionLink("Logout", "Logout", "Login")
+                <button>
+                    @Html.ActionLink("DashBoard", "EmpDashBoard", "Emp")
+                </button>
             </h2>
         </div>
     </div>
-
 </div>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <table class="table table-bordered" id="myTable">
-
-        <thead>
-
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Task1)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PlanedEffort)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TaskStatus)
-                </th>
-                
-                <th>
-                    @Html.DisplayNameFor(model => model.Date)
-                </th>
+<br />
+<br />
+<br />
 
 
-            </tr>
-        </thead>
+<table class="table table-bordered" id="myTable">
+
+    <thead>
+
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TicketNo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Task1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PlanedEffort)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskStatus)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Comment)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+
+
+        </tr>
+    </thead>
 
 
 
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Task1)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PlanedEffort)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TaskStatus)
-                    </td>
-                    
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Date)
-                    </td>
-                    <td>
-                        <input type="submit" value="Update" class="btn btn-default" />
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketNo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Task1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlanedEffort)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                <button style="background-color:red;">@Html.ActionLink("EditComment", "EditComment", new { id = item.TicketNo })</button>
 
-                    </td>
+            </td>
 
-                </tr>
-            }
-        <tbody>
-    </table>
-}
+        </tr>
+        }
+    <tbody>
+</table>
+
+
+@*<div class="container">
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6"></div>
+        </div>
+
+    </div>*@
