--- a/Manager/Views/Login/Login.cshtml
+++ b/Manager/Views/Login/Login.cshtml
@@ -35,7 +35,7 @@
     </div>
     <br />
     <div>
-        <a style="margin-top:20px;">@Html.ActionLink("Sign Up", "Registration", "Registration")</a>
+        <button id="middel">@Html.ActionLink("Sign Up", "Registration", "Registration")</button>
     </div>
 
 </div>
