--- a/Manager/Views/Emp/Assigned.cshtml
+++ b/Manager/Views/Emp/Assigned.cshtml
@@ -3,28 +3,36 @@
 @{
     ViewBag.Title = "Assigned";
 }
+<link href="~/Content/CSS/buttons.css" rel="stylesheet" />
 
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 AssignedTasks">
-            
-        </div>
-        <div class="col-md-6 logout">
             <h2>
-                @Html.ActionLink("Logout", "Logout", "Login")
+                <button>
+                    @Html.ActionLink("DashBoard", "EmpDashBoard", "Emp")
+                </button>
             </h2>
         </div>
+       
     </div>
 
 </div>
-<table class="table table-bordered" id="myTable">
+
+<br />
+<br />
+
+<table class="table  table-bordered " id="myTable">
 
     <thead>
 
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TicketNo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Task1)
@@ -34,6 +42,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TaskStatus)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Comment)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
@@ -48,25 +59,42 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+        <tr>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Task1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PlanedEffort)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TaskStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
- 
-            </tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketNo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Task1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlanedEffort)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+
+        </tr>
         }
     <tbody>
 </table>
+
+
+@section Scripts{
+
+
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+    </script>
+}
