--- a/Manager/Views/Tasks/Create.cshtml
+++ b/Manager/Views/Tasks/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>AssignedTask</h4>
+        <h4>Assigned Task</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -20,6 +20,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TicketNo, new { htmlAttributes = new { @class = "form-control" }, placeholder = "short name" ,required = "required" })
                 @Html.ValidationMessageFor(model => model.TicketNo, "", new { @class = "text-danger" })
+                <h5>@ViewBag.error</h5>
             </div>
         </div>
 
@@ -29,6 +30,7 @@
                 @Html.DropDownListFor(model => model.Name, ViewBag.NameList as SelectList,"----Select Name---", new { @class = "form-Control"})
 
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+
             </div>
         </div>
 
@@ -137,3 +139,8 @@
     @Html.ActionLink("Back", "Index")
 </div>
 
+<style>
+    .form-group{
+        color:black;
+    }
+</style>
