--- a/Manager/Views/Tasks/Details.cshtml
+++ b/Manager/Views/Tasks/Details.cshtml
@@ -3,8 +3,21 @@
 @{
     ViewBag.Title = "Details";
 }
-
 <h2>Details</h2>
+<br />
+<br />
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 AssignedTasks">
+            <h2>
+                <button>
+                    @Html.ActionLink("DashBoard", "AdminDashBoard", "Admin")
+                </button>
+            </h2>
+        </div>
+    </div>
+</div>
+
 
 <div>
     <h4>Task</h4>
