--- a/Manager/Views/Tasks/Index.cshtml
+++ b/Manager/Views/Tasks/Index.cshtml
@@ -7,26 +7,41 @@
 
 
 <link href="~/Content/CSS/AdminTask.css" rel="stylesheet" />
-
+<link href="~/Content/CSS/buttons.css" rel="stylesheet" />
 
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 AssignedTasks">
+        <div class="col-md-4 AssignedTasks">
             <h2>
-                @Html.ActionLink("Assign Task", "Create")
+                <button>
+                    @Html.ActionLink("DashBoard", "AdminDashBoard", "Admin")
+                </button>
             </h2>
         </div>
-        <div class="col-md-6 logout">
-            <h3>
-                @Html.ActionLink("Logout", "Logout", "Login")
-            </h3>
+        <div class="col-md-4 AssignedTasks">
+            <h2>
+                <button>
+                    @Html.ActionLink("Assign Task", "Create")
+                </button>
+            </h2>
+
+        </div>
+        <div class="col-md-4 logout">
+            <h2>
+                <button>
+                    @Html.ActionLink("Logout", "Logout", "Login")
+                </button>
+            </h2>
+
         </div>
     </div>
 
 </div>
 
-
+<br />
+<br />
+<br />
 
 
 <table class="table table-bordered" id="myTable">
@@ -36,6 +51,9 @@
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TicketNo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Task1)
@@ -59,29 +77,32 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+        <tr>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Task1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PlanedEffort)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TaskStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    <button style="background-color:red;">@Html.ActionLink("Delete", "Delete", new { id = item.TicketNo })</button>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketNo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Task1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlanedEffort)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                <button style="background-color:red;">@Html.ActionLink("Delete", "Delete", new { id = item.TicketNo })</button>
 
-                </td>
+            </td>
 
-            </tr>
+        </tr>
         }
     <tbody>
 </table>
