--- a/Manager/Views/Login/Login.cshtml
+++ b/Manager/Views/Login/Login.cshtml
@@ -34,8 +34,10 @@
         </div>
     </div>
     <br />
+
+    <a> @Html.ActionLink("Forget Password?", "ForgotPassword", "ForgetPassword")</a>
     <div>
-        <button id="middel">@Html.ActionLink("Sign Up", "Registration", "Registration")</button>
+        <button id="middel"> @Html.ActionLink("Sign Up", "Registration", "Registration") </button>
     </div>
 
 </div>
